Correct display icofont error on IE.

--- a/static/sass/base/_iconfont.sass
+++ b/static/sass/base/_iconfont.sass
@@ -1,6 +1,6 @@
 .icon
-  width:  18px
-  height: 18px
+  width:  28px
+  height: 28px
   margin: none
 
   font-family: 'icon'
@@ -11,63 +11,62 @@
   color: grey
 
 .icon-parent:before
-  content: ''
+  content: '\e60e'
 
 .icon-back:before
-  content: ''
+  content: '\e60e'
   display: inline-block
   +rotate(-90deg)
 
 .icon-forward:before
-  content: ''
+  content: '\e60e'
   display: inline-block
   +rotate(90deg)
 
 .icon-thumb:before
-  content: ''
+  content: '\e600'
 
 .icon-list:before
-  content: ''
+  content: '\e601'
 
 .icon-cut:before
-  content: ''
+  content: '\e608'
 
 .icon-copy:before
-  content: ''
-
+  content: '\e603'
 .icon-paste:before
-  content: ''
+  content: '\e602'
 
 .icon-file:before
-  content: ''
+  content: '\e60a'
 
 .icon-folder-close:before
-  content: ''
+  content: '\e604'
 
 .icon-folder-open:before
-  content: ''
+  content: '\e605'
 
 .icon-remove:before
-  content: ''
+  content: '\e609'
 
 .icon-arrow-right:before
-  content: ''
+  content: '\e60d'
 
 .icon-arrow-down:before
-  content: ''
+  content: '\e60d'
   display: inline-block
   +rotate(90deg)
 
 .icon-share:before
-  content: ''
+  content: '\e614'
 
 .icon-rename:before
-  content: ''
+  content: '\e607'
 
 .icon-move:before
-  content: ''
+  content: '\e60b'
   display: inline-block
   +rotate(45deg)
 
 .icon-download:before
-  content: ''
+  content: '\e606'
